# gosignaling

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  WASM_BUILD_SUCCESS.md  build-wasm.ps1  client.html  fly.toml  go.mod  go.sum  main.go  rustwasm.html  server.go
config/: config.go
handler/: handler.go
manager/: room.go
model/: message.go  room.go
repository/: room.go
repository/mem/: room.go
services/: clustering.go
webrtc-wasm/: Cargo.toml  README.md
webrtc-wasm/.cargo/: config.toml
webrtc-wasm/src/: lib.rs
