[package]
name = "webrtc-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlVideoElement",
    "MediaStream",
    "MediaStreamTrack",
    "MediaDevices",
    "MediaStreamConstraints",
    "Navigator",
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcTrackEvent",
    "RtcIceGatheringState",
    "RtcPeerConnectionState",
    "RtcRtpSender",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
